--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Basic Page Needs
   ================================================== -->
     <meta charset="utf-8">
-    <title>Engineer X's Homepage</title>
+    <title>Ingeniero Nicolás Aldana</title>
     <meta name="description" content="Engineer X's Homepage, Uniandes, Bogotá">
     <meta name="keywords" content="Uniandes, Bogotá, Systems Engineering">
     <meta name="author" content="Engineer X">
@@ -47,7 +47,7 @@
             <!-- Logo -->
             <h3 id="logo" style="text-align:center;">
                 <img src="images/engineer_animated.gif" width="200" class="with_border"/>
-                Engineer X
+                Nicolás Aldana
             </h3>
             <hr/>
 
