--- a/index.html
+++ b/index.html
@@ -78,11 +78,11 @@
                 <table border='0' cellpadding='0' cellspacing='0'>
                     <tr class='days'>
                         <th></th>
-                        <th>Monday</th>
-                        <th>Tuesday</th>
-                        <th>Wednesday</th>
-                        <th>Thursday</th>
-                        <th>Friday</th>
+                        <th>Lunes</th>
+                        <th>Martes</th>
+                        <th>Miercoles</th>
+                        <th>Jueves</th>
+                        <th>Viernes</th>
                     </tr>
                     <tr>
                         <td class='time'>8.00</td>
@@ -157,7 +157,7 @@
         <div class="doc-section" id="contact">
             <h3>Contact</h3>
             <p>
-                Engineer X<br/>
+                Nicolás Aldana<br/>
                 <span style="FONT-WEIGHT: bold">Address:</span> Life Avenue, Bogotá, Colombia<br>
                 <span style="FONT-WEIGHT: bold">Office:</span>&nbsp;&nbsp;HB08.160,&nbsp; Building 36<br>
                 <span style="FONT-WEIGHT: bold">Email:</span>&nbsp;&nbsp;engineer@x-men.mutant
