--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                         <th>Viernes</th>
                     </tr>
                     <tr>
-                        <td class='time'>8.00</td>
-                        <td class='cs purple' data-tooltip='Languages &amp; Machines'>ISIS-1106 <br/> [AU-211]</td>
+                        <td class='time'>18.0</td>
+                        <td class='cs purple' data-tooltip='Software'>ING <br/> [g-702]</td>
                         <td></td>
                         <td></td>
                         <td>-</td>
